html and css of the calculator, plus some initial functions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,39 @@
     <title>TOP Calculator Project</title>
 </head>
 <body>
-
+    <div id ='calculator'>
+        <div id="display">
+            <p id="operation"> </p>
+            <p id="input">0</p></div>
+        <div class="row">
+            <button id="clear">CLEAR</button>
+            <button id="delete">DELETE</button>
+        </div>
+        <div class="row">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>/</button>
+        </div>
+        <div class="row">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>*</button>
+        </div>
+        <div class="row">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>-</button>
+        </div>
+        <div class="row">
+            <button>.</button>
+            <button>0</button>
+            <button>=</button>
+            <button>+</button>
+        </div>
+    </div>
 
     
     <script src="app.js"></script>
